display remaining cards

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $background: #333;
 $blue-button: #292ba3;
 $green-title: #0c450c;
 $green: green;
+$red-button: #bf4040;
 $white: #eee;
 
 $font-primary: 'Playfair Display', serif;
